# xstream

./: README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: IconButton.tsx
src/components/Layout/: Layout.tsx  MusicBar.tsx  NavBar.tsx  SideBar.tsx  SideBarLink.tsx
src/components/Layout/MusicBar/: MusicBar.tsx  MusicControls.tsx  MusicPlayer.tsx  MusicThumbnail.tsx  MusicTimeline.tsx  MusicTimevalue.tsx  MusicTracklist.tsx  MusicTracklistButton.tsx
src/components/Layout/SideBar/: SideBar.tsx  SideBarLink.tsx  SideBarLinkWrapper.tsx
src/components/Volume/: Volume.tsx  VolumeButton.tsx  VolumeSlider.tsx
src/contexts/: PlayerContext.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
src/themes/: dark.ts
