workspace = { }

[package]
name = "xstream"
version = "1.0.0"
description = "XStream is a hybrid music player application."
license = ""
repository = ""
default-run = "xstream"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "xstream"
path = "src/main.rs"
